checker/tests/parsing/errors/missing_bound.mft
type T {
  f: ;
}
=== error ===
Unrecognized token `;` found at 14:15
Expected one of "field reference", "identifier", "string literal" or "variable"